--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ table {
     border-spacing: 0;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
 /*end reset*/
 
 body{
@@ -60,6 +64,7 @@ body{
     background-repeat: no-repeat;
     background-position:top;
     font-family: "PTSans Narrow", sans-serif;
+    text-transform: uppercase;
 }
 .container{
     width: 940px;
@@ -67,12 +72,12 @@ body{
     padding: 0 10px;
     margin: 0 auto;
 }
-.index-header{
+.index-header, .price-header{
     background: black;
 }
 .nav-block{
     display: inline-block;
-    width: 540px;
+    width: 780px;
     padding-top: 20px;
     padding-bottom: 20px;
     
@@ -81,18 +86,31 @@ body{
 .nav-block ul li{
     text-decoration: none;
     display: inline;
+    
+    line-height: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
-.nav-block ul li a{
+.nav-block>ul>li>a{
     text-decoration: none;
     color: white;
     font-size: 16px;
-    line-height: 22px;
-    margin-left: 20px;   
+    margin-left: 30px; 
+    
+    padding: 16px 3px;
+    
+}
+.nav-block ul li a:hover, .user-block:hover{
+    background-color: #1F1F1F;
+}
+.nav-current{
+    border-bottom: 4px solid white;
+   
 }
 .user-block{
     display: inline-block;
     float: right;
-    width: 140px;
+    max-width: 140px;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: right;
@@ -101,14 +119,23 @@ body{
     background-position: center;
     
     font-family: "PTSans Narrow Bold", sans-serif;
+    line-height: 20px;
+}
+.user-block:hover{
+    background-image: url(../img/hover-login-icon.png);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .login a{
     text-decoration: none;
     color: white;
-    padding-right: 10px;
+    
+    padding: 20px 10px;
+    padding-left: 80px;
 }
 .index-logo{
     width: 368px;
+    height: 204px;
     margin: 60px auto; 
     margin-bottom: 30px;
 }
@@ -256,6 +283,7 @@ a.btn-min{
 .footer-descr{
     display: inline-block;
     width: 380px;
+    margin-right: 20px;
        
 }
 .footer-descr a{
@@ -292,12 +320,13 @@ a.btn-min{
     text-align: center;
     margin-top: 60px;
     margin-bottom: 15px;
+    
 }
 
 .footer-dev{
     display: inline-block;
     width: 140px;
-    margin-left: 260px;
+    margin-left: 254px;
     vertical-align: top;
 }
 .dev-title{
@@ -316,4 +345,163 @@ a.btn-min{
     text-decoration: none;
     text-align: center;
     line-height: 42px;
+}
+
+/*barbershop-price*/
+
+
+body.price-body{
+    background: white;
+}
+.price-header{
+    width: 100%;
+}
+.price-main{
+    background:#F8F4F1  url(../img/index-content-bg.png);
+}
+.header-logo{
+    display: inline-block;
+    width: 111px;
+    height: 24px;
+    background: url(../img/price-logo.png) no-repeat;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+.nav-block-price{
+    width: 680px;
+}
+.price-main>.container{
+    background: url(../img/index-content-bg.png);
+    
+    color: black;
+    font-family: PTSans Narrow Bold, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+}
+.name-of-page{
+    font-size: 30px;
+    line-height: 44px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+.bread-crumbs{
+    padding-bottom: 40px;
+}
+.bread-crumbs li{
+    display: inline-block;
+    padding-right: 10px;
+}
+.before-crumbs::after{
+    content: "";
+    display: inline-block;
+    height: 5px;
+    width: 5px;
+    background-color: black;
+    transform: rotate(45deg);
+    margin: 3px 12px;
+    margin-right: 0px;
+
+}
+
+.current-crumbs{
+    color: #ADAAA8;
+}
+.page-title{
+    font-size: 48px;
+    line-height: 68px;
+    display: inline-block;
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-bottom: 60px;
+}
+.page-title:before{
+    content: "";
+    display: inline-block;
+    width: 155px;
+    height: 2px;
+    background-color: black;
+    margin-bottom: 15px;
+    margin-right: 25px;
+}
+.page-title:after{
+    content: "";
+    display: inline-block;
+    width: 155px;
+    height: 2px;
+    background-color: black;
+    margin-bottom: 15px;
+    margin-left: 25px;
+}
+
+.we-using{
+    display: inline-block;
+    width: 240px;
+    float: left;
+}
+.service-prices{
+    display: inline-block;
+    width: 460px;
+    vertical-align: top;
+    float: right;
+}
+.clear-fix{
+    display:table;
+    clear:both;
+}
+.we-using-title, .service-prices-title{
+    font-size: 24px;
+    padding-bottom: 30px;
+}
+.service-prices-title{
+    width: 220px;
+}
+.we-using-item{
+   padding-bottom: 5px; 
+}
+.we-using-item::before{
+    content: "";
+    display: inline-block;
+    height: 8px;
+    width: 8px;
+    background-color: black;
+    transform: rotate(45deg);
+    margin: 3px 12px;
+    margin-left: 0;
+}
+.service-prices table{
+    border: 2px solid black;
+    width: 100%;
+}
+.service-prices>table tr td{
+    border: 2px solid black;
+    padding: 10px;
+    padding-left: 15px;
+}
+.td-price{
+    text-align: center;
+}
+.about-us-title{
+    font-size: 24px;
+    padding-top: 55px;
+    padding-bottom: 35px;
+}
+.about-us-item{
+    display: inline-block;
+    width: 385px;
+    font-family: PTSans Narrow Bold, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    padding-bottom: 80px;
+}
+.about-us-item-left{
+    padding-right: 100px;
+}
+.price-footer{
+    background:#1C1C1C url(../img/price-footer.png);
+    
+    font-family: "PTSans Narrow Bold", sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    color: white;
+    padding-bottom: 40px;
 }
